endpoint improvements
